Alignment of button as well as positioning of checkbox fixed

--- a/src/Admin-side/sign-in/input.css
+++ b/src/Admin-side/sign-in/input.css
@@ -110,10 +110,11 @@ input[type^="password"] {
 
 .remember{
     display: flex;
+    flex-direction: row-reverse;
     justify-content: space-evenly;
     align-items: center;
-    width: 30%;
-    margin-right: 15%
+    width: auto;
+    margin-right: 15%;
 }
 
 .err{
