--- a/src/Client-side/menu/Menu.css
+++ b/src/Client-side/menu/Menu.css
@@ -48,7 +48,7 @@
     font-weight: bold;
     text-shadow: 0px 3px 6px rgba(0, 0, 0, 16%);
     bottom:70px;
-    left: 150px
+    left:35%
 }
 
 .total{
