--- a/src/Client-side/menu/dishes/dishes.css
+++ b/src/Client-side/menu/dishes/dishes.css
@@ -93,7 +93,7 @@
   justify-content: center;
   align-items: flex-start;
   width: 100px;
-  margin-left: 10%
+  margin-left: 41px;
 }
 .sing{
   color: #31d82b;
